--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
+
 * {
     padding: 0;
     margin: 0;
     vertical-align: top;
     box-sizing: border-box;
+}
+
+::-webkit-scrollbar{
+    display: none;
 }
 
 body {
@@ -14,34 +20,18 @@ body {
     color: #333;
 }
 
-body {
-    background: linear-gradient(132deg, #c7907c, #6983a0);
-    background-size: 400% 400%;
-    animation: BackgroundGradient 30s ease infinite;
-}
-
-@keyframes BackgroundGradient {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
-}
 
 
+/* section-home-page-start */
 .container {
     width: 100vw;
     height: 100vh;
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background-image: url(../image/home-page-bg-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .logo {
@@ -61,3 +51,189 @@ h1 {
     padding-top: 20px;
     font-size: 16px;
 }
+
+.header-icon{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.icons ul {
+    display: flex;
+}
+
+.icons ul li{
+    list-style: none;
+}
+
+.icons ul li a{
+    padding: 7px;
+    text-decoration: none;
+    color: #4e5a62;
+}
+
+.icons ul li a:hover{
+    color: rgb(202, 165, 30);
+}
+
+.icons ul li span{
+    margin-left: 5px;
+}
+
+.icons ul li a span:hover{
+        color: #4e5a62;
+}
+
+.header-nav{
+    width: 100%;
+    height: 100px;
+}
+
+.header-nav ul{
+    display: flex;
+    align-items: center;
+    padding-left: 140px;
+}
+
+.header-nav ul li{
+    list-style: none;
+}
+
+.header-nav ul li a{
+    padding: 15px;
+    text-decoration: none;
+    color: #4e5a62;
+}
+
+.header-nav ul li a:hover{
+    color: rgb(202, 165, 30);
+}
+
+.header-nav ul li img{
+    height: 90px;
+    margin-left: 170px; 
+    margin-right: 130px;
+}
+
+.text{
+    width: 50%;
+    height: 300px;
+    padding-left: 20px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.text h1{
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+.text h5{
+    margin: 0 35px;
+    font-weight: normal;
+    margin-bottom: 15px;
+}
+
+.text span{
+    width: 36%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.text span a{
+    padding: 8px 15px;
+    text-decoration: none;
+    background: rgb(202, 165, 30);
+    border-radius: 50px;
+    color: #4e5a62;
+}
+
+.text span a:hover{
+    color: white;
+}
+/* section-home-page-end */
+
+/* services-section-start */
+#services{
+    width: 100vw;
+    height: auto;
+    padding: 0 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+
+.sect-title{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sect-title h1{
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 45px;
+    position: relative;
+}
+
+.sect-title h1::after{
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: tomato;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.service-box{
+    width: 300px;
+    height: 480px;
+    padding: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-1{
+    background-color: teal;
+}
+
+.service-box img{
+    height: 245px;
+    border-radius: 20px;
+}
+
+.service-box h2{
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.service-box p{
+    line-height: 20px;
+
+}
+
+.service-box span a{
+        padding: 8px 15px;
+        text-decoration: none;
+        background: rgb(202, 165, 30);
+        border-radius: 50px;
+        color: #4e5a62;
+}
+
+.service-box span a:hover{
+    color: white;
+}
+
+/* services-section-end */
