--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,7 @@ h1 {
     font-weight: 400;
     line-height: 45px;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .sect-title h1::after{
@@ -261,6 +262,7 @@ h1 {
     font-weight: 400;
     line-height: 45px;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .about-title h1::after {
@@ -309,11 +311,14 @@ h1 {
     text-align: center;
 }
 
-/* .about-img-box{
-    background-color: aqua;
-} */
+.about-img-box{
+    display: flex;
+    justify-content: center;
+}
 
 .about-img-box img{
+    width: 600px;
+    height: 510px;
     border-radius: 25px;
 }
 /* about-us-section-end */
@@ -338,6 +343,7 @@ h1 {
     font-weight: 400;
     line-height: 45px;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .gallery-title h1::after {
@@ -356,6 +362,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .gallery-img-box img{
@@ -379,7 +386,7 @@ h1 {
 .footer-column{
     width: 300px;
     height: 200px;
-    padding: 30px 0px;
+    padding: 30px 20px;
     display: flex;
     flex-direction: column;
 }
@@ -420,7 +427,7 @@ h1 {
 .footer-bottom{
     width: 100%;
     height: 40px;
-    padding: 0px 10px;
+    padding: 0px 30px;
     background: rgb(26, 25, 25);
     color: white;
     display: flex;
