--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -79,7 +79,7 @@ body {
     width: 100%;
     height: 65px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .add-details-1{
@@ -121,6 +121,7 @@ body {
     width: 480px;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 
@@ -140,4 +141,23 @@ body {
         border-radius: 5px;
         outline: none;
         border: 1px solid #333;
+}
+
+.submit{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.submit span a{
+    text-decoration: none;
+    padding: 8px 16px;
+    background: violet;
+    border-radius: 10px;
+    color: #333;
+}
+
+.submit span a:hover{
+    color: white;
 }
