--- a/css/home-page.css
+++ b/css/home-page.css
@@ -38,7 +38,6 @@ body {
     /* background-image: url(../image/home-page-bg.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 20px;
 }
 
 
@@ -47,6 +46,7 @@ body {
     width: 100%;
     height: 80px;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
@@ -147,12 +147,13 @@ body {
 .text h1 {
     font-size: 38px;
     font-weight: 600;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .text h2{
     font-size: 22px;
-    margin-bottom: 5px;
+    font-weight: 400;
+    margin-bottom: 10px;
 }
 
 .text h5 {
